This is the changelog for jom 1.1.5, the parallel make tool.

Changes since jom 1.1.4
- Fixed compound defined() preprocessor expressions (QTCREATORBUG-24134).
- A leading hyphen in MAKEFLAGS is now ignored.

Changes since jom 1.1.3
- Fixed handling of the command line option /j.
- Makefiles that do not contain targets are allowed.
- Fixed handling of macro definitions on the command line (QTCREATORBUG-22176).
- Enabled usage of paths longer than MAX_PATH (QTCREATORBUG-22848).
- Added version information to the executable (QTCREATORBUG-23290).
- Fixed directory separators in the MAKEDIR variable (QTCREATORBUG-23559).
- Fixed expansion of absolute path wildcard dependencies (QTCREATORBUG-26745).
- Fixed performance penalty when checking for dependency cycles in complex
  Makefiles (QTCREATORBUG-29412).

Changes since jom 1.1.2
- Removed the /KEEPTEMPFILES option. This option only worked for top-level make
  files anyway and was less useful than intended. Use the /U option to display
  the content of inline files instead.
- Fixed an issue where jom.exe would try to load qt.conf from drive E.
- Fixed handling of double backslash at the end of line (QTCREATORBUG-20550).
- Fixed handling of line continuations in preprocessor directives
  (QTCREATORBUG-8621, QTCREATORBUG-18001).
- Fixed the CMake project file.

Changes since jom 1.1.1
- Fixed exit code propagation in xgejom.bat and ibjom.bat (QTCREATORBUG-16619).
- Updated the CMake build system to use Qt5.
- Fixed bogus path in error message for failed targets.
- Fixed error "JobClient destroyed while still acquiring." that could be yielded
  for failed builds.
- Fixed /k option (QTCREATORBUG-17131).
- Fixed sub-jom detection for chocolatey shims (QTCREATORBUG-15494).

Changes since jom 1.1.0
- Added the special .NOTPARALLEL target that disables parallel build for the
  containing makefile.
- Fixed glitches in !include directives. Includes like <"foo.mk"> were not